--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8" />
-        <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+        <link rel="icon" type="image/svg+xml" href="/icon.svg" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Editor</title>
         <!-- SEO tags -->
@@ -12,10 +12,38 @@
         />
         <meta
             name="keywords"
-            content="editor, text editor, web editor, simple editor"
+            content="editor, text editor, web editor, simple editor, online text editor, notepad, markdown editor"
         />
         <meta name="author" content="Saiful Alam Rakib" />
+        <meta name="robots" content="index, follow" />
+        <meta name="language" content="en" />
         <meta name="theme-color" content="#ffffff" />
+
+        <!-- Open Graph / Facebook -->
+        <meta property="og:type" content="website" />
+        <meta property="og:title" content="Editor - Simple Web Text Editor" />
+        <meta
+            property="og:description"
+            content="A simple text editor to edit quickly on the web..."
+        />
+        <meta property="og:url" content="https://text.msar.me" />
+        <meta property="og:image" content="https://text.msar.me/icon.svg" />
+        <meta property="og:site_name" content="Editor" />
+
+        <!-- Twitter -->
+        <meta name="twitter:card" content="summary_large_image" />
+        <meta name="twitter:title" content="Editor - Simple Web Text Editor" />
+        <meta
+            name="twitter:description"
+            content="A simple text editor to edit quickly on the web..."
+        />
+        <meta name="twitter:image" content="https://text.msar.me/icon.svg" />
+
+        <!-- Additional SEO -->
+        <meta name="apple-mobile-web-app-capable" content="yes" />
+        <meta name="apple-mobile-web-app-status-bar-style" content="default" />
+        <meta name="apple-mobile-web-app-title" content="Editor" />
+        <link rel="canonical" href="https://text.msar.me" />
     </head>
     <body class="overflow-hidden font-mono">
         <div id="app"></div>
