--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <meta name="twitter:image" content="https://text.msar.me/icon.svg" />
 
         <!-- Additional SEO -->
-        <meta name="apple-mobile-web-app-capable" content="yes" />
+        <meta name="mobile-web-app-capable" content="yes" />
         <meta name="apple-mobile-web-app-status-bar-style" content="default" />
         <meta name="apple-mobile-web-app-title" content="Editor" />
         <link rel="canonical" href="https://text.msar.me" />
