--- a/index.html
+++ b/index.html
@@ -44,6 +44,9 @@
         <meta name="apple-mobile-web-app-status-bar-style" content="default" />
         <meta name="apple-mobile-web-app-title" content="Editor" />
         <link rel="canonical" href="https://text.msar.me" />
+
+        <link rel="apple-touch-icon" href="/icon.svg" sizes="180x180" />
+        <link rel="mask-icon" href="/icon.svg" color="#FFFFFF" />
     </head>
     <body class="overflow-hidden font-mono">
         <div id="app"></div>
