--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             content="A simple text editor to edit quickly on the web..."
         />
         <meta property="og:url" content="https://text.msar.me" />
-        <meta property="og:image" content="https://text.msar.me/icon.svg" />
+        <meta property="og:image" content="https://text.msar.me/light.png" />
         <meta property="og:site_name" content="Editor" />
 
         <!-- Twitter -->
@@ -37,7 +37,7 @@
             name="twitter:description"
             content="A simple text editor to edit quickly on the web..."
         />
-        <meta name="twitter:image" content="https://text.msar.me/icon.svg" />
+        <meta name="twitter:image" content="https://text.msar.me/light.png" />
 
         <!-- Additional SEO -->
         <meta name="mobile-web-app-capable" content="yes" />
