--- a/index.html
+++ b/index.html
@@ -1,47 +1,73 @@
 <!DOCTYPE html>
 <html lang="en">
+    <head>
+        <meta charset="UTF-8" />
+        <link rel="icon" type="image/svg+xml" href="/icon.svg" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Editor</title>
+        <!-- SEO tags -->
+        <meta
+            name="description"
+            content="A simple text editor to edit quickly on the web..."
+        />
+        <meta
+            name="keywords"
+            content="editor, text editor, web editor, simple editor, online text editor, notepad, markdown editor"
+        />
+        <meta name="author" content="Saiful Alam Rakib" />
+        <meta name="robots" content="index, follow" />
+        <meta name="language" content="en" />
+        <meta name="theme-color" content="#ffffff" />
+        <link rel="manifest" href="/manifest.webmanifest" />
+        <meta
+            name="theme-color"
+            content="#0f172a"
+            media="(prefers-color-scheme: dark)"
+        />
 
-<head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/icon.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Editor</title>
-    <!-- SEO tags -->
-    <meta name="description" content="A simple text editor to edit quickly on the web..." />
-    <meta name="keywords"
-        content="editor, text editor, web editor, simple editor, online text editor, notepad, markdown editor" />
-    <meta name="author" content="Saiful Alam Rakib" />
-    <meta name="robots" content="index, follow" />
-    <meta name="language" content="en" />
-    <meta name="theme-color" content="#ffffff" />
+        <!-- PWA Meta Tags -->
+        <meta name="mobile-web-app-capable" content="yes" />
+        <meta name="apple-mobile-web-app-capable" content="yes" />
+        <meta name="apple-mobile-web-app-status-bar-style" content="default" />
+        <meta name="apple-mobile-web-app-title" content="Editor" />
+        <meta name="application-name" content="Editor" />
+        <meta name="msapplication-TileColor" content="#ffffff" />
+        <meta name="msapplication-config" content="/browserconfig.xml" />
 
-    <!-- Open Graph / Facebook -->
-    <meta property="og:type" content="website" />
-    <meta property="og:title" content="Editor - Simple Web Text Editor" />
-    <meta property="og:description" content="A simple text editor to edit quickly on the web..." />
-    <meta property="og:url" content="https://text.msar.me" />
-    <meta property="og:image" content="https://text.msar.me/light.png" />
-    <meta property="og:site_name" content="Editor" />
+        <!-- Open Graph / Facebook -->
+        <meta property="og:type" content="website" />
+        <meta property="og:title" content="Editor - Simple Web Text Editor" />
+        <meta
+            property="og:description"
+            content="A simple text editor to edit quickly on the web..."
+        />
+        <meta property="og:url" content="https://text.msar.me" />
+        <meta property="og:image" content="https://text.msar.me/light.png" />
+        <meta property="og:site_name" content="Editor" />
 
-    <!-- Twitter -->
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="Editor - Simple Web Text Editor" />
-    <meta name="twitter:description" content="A simple text editor to edit quickly on the web..." />
-    <meta name="twitter:image" content="https://text.msar.me/light.png" />
+        <!-- Twitter -->
+        <meta name="twitter:card" content="summary_large_image" />
+        <meta name="twitter:title" content="Editor - Simple Web Text Editor" />
+        <meta
+            name="twitter:description"
+            content="A simple text editor to edit quickly on the web..."
+        />
+        <meta name="twitter:image" content="https://text.msar.me/light.png" />
 
-    <!-- Additional SEO -->
-    <meta name="mobile-web-app-capable" content="yes" />
-    <meta name="apple-mobile-web-app-status-bar-style" content="default" />
-    <meta name="apple-mobile-web-app-title" content="Editor" />
-    <link rel="canonical" href="https://text.msar.me" />
+        <!-- Additional SEO -->
+        <link rel="canonical" href="https://text.msar.me" />
 
-    <link rel="apple-touch-icon" href="/icon.svg" sizes="180x180" />
-    <link rel="mask-icon" href="/icon.svg" color="#FFFFFF" />
-</head>
+        <!-- PWA Icons -->
+        <link rel="apple-touch-icon" href="/icon.svg" sizes="180x180" />
+        <link rel="mask-icon" href="/icon.svg" color="#FFFFFF" />
+        <link rel="shortcut icon" href="/icon.svg" />
+        <meta name="msapplication-TileImage" content="/icon.svg" />
+    </head>
 
-<body class="overflow-hidden font-mono bg-body bg-slate-100 dark:bg-slate-950 text-black dark:text-white">
-    <div id="app"></div>
-    <script type="module" src="/src/main.ts"></script>
-</body>
-
+    <body
+        class="overflow-hidden font-mono bg-body bg-slate-100 dark:bg-slate-950 text-black dark:text-white"
+    >
+        <div id="app"></div>
+        <script type="module" src="/src/main.ts"></script>
+    </body>
 </html>
